# MCP_Demo

./: .gitignore  README.md  app.py  browser_mcp.json  pyproject.toml
backend/: __init__.py  agent.py  main.py
backend/api/: __init__.py
backend/mcp/: __init__.py
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/plugins/: vuetify.ts
